--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,35 @@
     <groupId>org.example</groupId>
     <artifactId>myProject</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
     </properties>
 
+    <build>
+        <finalName>myProject</finalName>
+        <defaultGoal>package</defaultGoal>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <goal>jar:inplace</goal>
+                    <outputDirectory>artifacts</outputDirectory>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
